traefik/templates/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  namespace: traefik
spec:
  routes:
    - kind: Rule
      match: Host(`traefik.moat`)
      services:
        - kind: TraefikService
          name: api@internal
